--- a/activities/Activity3.tex
+++ b/activities/Activity3.tex
@@ -15,46 +15,80 @@ cai0004@auburn.edu
 \begin{enumerate}
 	\item Identify major business processes of this store
 	
-	Selling products to the customer (transactions), buying products from supplier/distributor, managing inventory, logging employee hours,  managing business expenses/profits, managing customer information
+	Selling products to the customer (transactions), buying products from supplier/distributor, managing inventory, logging employee hours
 	
 	\item Determine activities of each process
 	
 	\begin{itemize}
 		\item Customer transactions
 		\begin{itemize} 
-			\item Determine item(s) to be sold (identify)
-			\item Check inventory for item (if none stocked, order item - see below)
-			\item Check price of item
-			\item Track transaction (store in logs)
+			\item Customer identifies items they wish to purchase
+			\item Employee checks that item is available to sell
+			\item Employee rings up cost of purchase
+			\item Employee logs record of purchase and price sold
 		\end{itemize}
 		\item Buying products from supplier/distributor
 		\begin{itemize}
-			\item Determine price of order(s)
-			\item Verify and confirm orders
-			\item Complete transactions
+			\item Management fills out order form for desired quantities
+			\item Management sends order forms to suppliers
+			\item Management calculates and log price of purchase
+			\item Supplier ships orders to store
+			\item Employees stock shelves; store inventory
 		\end{itemize}
 		\item Manage Inventory
 		\begin{itemize}
-			\item Determine which items are low / empty on stock
-			\item Display information about inventory count
-			\item For items low on stock, go to Buying products from supplier/distributor (above)
-			\item Update inventory database upon arrival of new stock
-			\item Update inventory database upon depletion of stock
-			\item Employees also check stock daily/weekly against database to ensure no mistakes
+			\item Employees take (daily/weekly/monthly) stock of inventory
+			\item Employees record stock in logs
+			\item For items low on stock, see Buying products from supplier/distributor (above)
+			\item Employees record new stock arrivals
+			\item Employees/management verify inventory against transaction logs
 		\end{itemize}
 		\item Logging employee hours
 		\begin{itemize}
-			\item Track employee hours through some system (time cards, employee login, etc)
-			\item Employees view hours worked, verify
-			\item Present employee payment information to management, management verifies
+			\item Employees track employee hours through some system (time cards, employee login, etc)
+			\item Management verifies hours worked
+			\item Management sets hourly wages
 			\item Management pays employees
+			\item Management logs payment information
 		\end{itemize}
-		\item managing business expenses/profits
-		\begin{itemize}
-			\item Employees complete transactions (see customer transactions)
-			\item Profit, revenue, expenses updated upon each transaction (see steps 1 and 2)
-			\item Management views information, determines 
 	\end{itemize}
+	
+	\item Determine involved people and group into classes (roles)
+		\begin{itemize}
+			\item Management
+				\begin{itemize}
+					\item Mr. Smith
+					\item and his cronies
+				\end{itemize}
+			\item Employees
+				\begin{itemize}
+					\item Cashiers
+					\item Stockers
+					\item People that roam the aisles wearing vests
+				\end{itemize}
+			\item Customers
+				\begin{itemize}
+					\item loyal
+					\item disloyal
+					\item none of the above
+				\end{itemize}
+		\end{itemize}
+			
+	\item Determine their responsibilities\\
+	
+		\begin{tabular}{c | c | c}
+		Management & Employees & Customers \\ \hline
+		fill orders & Check item availability & identify items to purchase\\
+		send orders & Ring up purchase & sign up for store account\\
+		log orders & log purchase and price & provide the necessary payment\\
+		verify hours & stock shelves & stop going to wal-mart\\
+		set wages & store inventory & please stop its killing our business\\
+		pay employees & take inventory &\\
+		log payments & record inventory &\\
+		 & record shipments &\\
+		 & verify inventory &\\
+		 & track hours worked &
+		\end{tabular}
 \end{enumerate}
 
 
