fixed a typo in the 'its'

--- a/activities/Activity3.tex
+++ b/activities/Activity3.tex
@@ -82,7 +82,7 @@ cai0004@auburn.edu
 		send orders & Ring up purchase & sign up for store account\\
 		log orders & log purchase and price & provide the necessary payment\\
 		verify hours & stock shelves & stop going to wal-mart\\
-		set wages & store inventory & please stop its killing our business\\
+		set wages & store inventory & please stop it's killing our business\\
 		pay employees & take inventory &\\
 		log payments & record inventory &\\
 		 & record shipments &\\
