--- a/assignment3/assignment3.tex
+++ b/assignment3/assignment3.tex
@@ -40,8 +40,8 @@ For the first version of the store mangement system, we want to start with the f
 	\textbf{Use case:} add a customer into the system\\
 	\textbf{Actors:} employees\\
 	\textbf{Goals:} update database to include new customer\\
-	\textbf{Related use cases:} adding a product (above) or transaction (below)
-	\textbf{Preconditions, steps, postconditions:} Same as above just replace "product" with "customer"
+	\textbf{Related use cases:} adding a product (above) or transaction (below)\\
+	\textbf{Preconditions, steps, postconditions:} Same as above just replace "product" with "customer"\\
 		\textbf{Steps:}
 		\begin{itemize}
 		\item the user clicks a button to display the customer database
@@ -59,7 +59,6 @@ For the first version of the store mangement system, we want to start with the f
 	\textbf{Related use case:} similar to product and customer cases\\
 	\textbf{Preconditions:} interface is set up and connected to transaction database, ideally the process is also set up to be somewhat automated\\
 	\textbf{Postconditions:} the database is updated with the transaction (ideally the system automatically breaks the purchase of multiple products into atomic purchases of each individual product)\\
-\newpage
 	\textbf{Steps:} 
 		\begin{itemize}
 		\item the user clicks add purchase
@@ -150,59 +149,81 @@ For the first version of the store mangement system, we want to start with the f
 	
 	Relations:
 	\begin{itemize}
-		\item customer: (customerID (private key), name, email)
-		\item product: (productID (private key), name, price)
-		\item purchases: (purchaseID (private key), customerID (foreign key), productID (foreign key), price)
+		\item customer: (customerID (PK), name, email, phone, address, payment info)
+		\item product: (barcode (PK), name, price, supplier, quantity)
+		\item purchases: (purchaseID (PK), customerID (FK), productID (FK), price, tax, cost, date, quantity)
 	\end{itemize}
 \newpage
 	\item Design the database physically using SQL, i.e., write SQL code to create the tables for those relations.
 \Suppressnumber
 \begin{lstlisting}
 CREATE TABLE Customers (
-	CustomerID int NOT NULL PRIMARY KEY,
-	Name varchar(255),
-	Email varchar(255)
+	"CustomerID" INTEGER NOT NULL UNIQUE,
+	"Name" TEXT,
+	"Email" TEXT,
+	"Phone" TEXT,
+	"Address" TEXT,
+	"PaymentInfo" TEXT,
+	PRIMARY KEY("CustomerID")
 );
 
 CREATE TABLE Products (
-	ProductID int NOT NULL PRIMARY KEY,
-	Name varchar(255),
-	Price float
+	"Barcode" INTEGER NOT NULL UNIQUE,
+	"Name" TEXT,
+	"Price" REAL,
+	"Supplier" TEXT,
+	"Quantity" INTEGER,
+	PRIMARY KEY("Barcode")
 );
+
 CREATE TABLE Purchases (
-	PurchaseID int NOT NULL PRIMARY KEY,
-	CustomerID int FOREIGN KEY REFERENCES Customers(CustomerID),
-	ProductID int FOREIGN KEY REFERENCES Products(ProductID),
-	Price float
+	PurchaseID INTEGER NOT NULL UNIQUE,
+	CustomerID INTEGER,
+	ProductID INTEGER,
+	Price REAL,
+	Tax REAL,
+	Cost REAL,
+	Date TEXT,
+	Quantity INTEGER,
+	PRIMARY KEY("PurchaseID"),
+	FOREIGN KEY("CustomerID") REFERENCES Customers(CustomerID),
+	FOREIGN KEY("ProductID") REFERENCES Products(ProductID)
 );
+
 \end{lstlisting}
 	\item Insert data into the tables, with at least 5 products, 5 customers, and 10 purchases.
 \begin{lstlisting}
-INSERT INTO Customers (CustomerID, Name, Email)
-VALUES	(1, 'Alice Appleton', 'aappleton@yahoo.com'),
-			(2, 'Bob Baker', 'bbaker@gmail.com'),
-			(3, 'Charlie Wilson', 'cwilson@outlook.com'),
-			(4, 'Dan Glover', 'dglover@gmail.com'),
-			(5, 'Eve Mcgee', 'emcgee@icloud.com');
+INSERT INTO Customers (CustomerID, Name, Email, Phone, Address, PaymentInfo)
+VALUES	(1, 'Alice Appleton', 'aappleton@yahoo.com', '334-555-6123', 
+		'345 Apple St', 'credit card'),
+			(2, 'Bob Baker', 'bbaker@gmail.com', '123-456-7891', 
+		'123 Abbey Rd', 'paypal'),
+			(3, 'Charlie Wilson', 'cwilson@outlook.com', '453-674-1235', 
+		'7351 Ross St', 'cash'),
+			(4, 'Dan Glover', 'dglover@gmail.com', '954-102-6423', 
+		'123 Main St', 'credit card'),
+			(5, 'Eve Mcgee', 'emcgee@icloud.com', '121-644-1345', 
+		'101 College St', 'credit card');
 
-INSERT INTO Products (ProductID, Name, Price)
-VALUES	(1, 'jacket', 59.99),
-			(2, 'pants', 21.95),
-			(3, 't-shirt', 14.99),
-			(4, 'dress', 44.95),
-			(5, 'shoes', 49.99);
+INSERT INTO Products (ProductID, Name, Price, Supplier, Quantity)
+VALUES	(1, 'jacket', 59.99, 'Jackets Inc.', 10),
+			(2, 'pants', 21.95, 'Nike', 25),
+			(3, 't-shirt', 14.99, 'Old Navy', 100),
+			(4, 'dress', 44.95, 'Dress store', 30),
+			(5, 'shoes', 49.99, 'Shoemart', 15);
 
-INSERT INTO Purchases (PurchaseID, CustomerID, ProductID, Price)
-VALUES	(1, 3, 2, 21.95),
-			(2, 5, 5, 41.55),
-			(3, 4, 5, 49.99),
-			(4, 2, 1, 59.99),
-			(5, 5, 2, 24.99),
-			(6, 3, 4, 44.95),
-			(7, 3, 3, 10.83),
-			(8, 1, 2, 21.95),
-			(9, 4, 5, 49.99),
-			(10, 1, 1, 51.12);
+INSERT INTO Purchases (PurchaseID, CustomerID, ProductID, Price, Tax, Cost, 
+	Date, Quantity)
+VALUES	(1, 3, 2, 21.95, 0.05, 22.00, '10/4/2019', 1),
+			(2, 5, 5, 41.55, 1.00, 42.55, '10/5/2019', 1),
+			(3, 4, 5, 49.99, 0.00, 99.98, '10/6/2019', 2),
+			(4, 2, 1, 59.99, 0.01, 60.00, '10/7/2019', 1),
+			(5, 5, 2, 24.99, 5.00, 29.99, '10/7/2019', 1),
+			(6, 3, 4, 44.95, 3.00, 47.95, '10/8/2019', 1),
+			(7, 3, 3, 10.83, 1.00, 11.83, '10/9/2019', 1),
+			(8, 1, 2, 21.95, 3.00, 24.95, '10/9/2019', 1),
+			(9, 4, 5, 49.99, 0.01, 50.00, '10/10/2019', 1),
+			(10, 1, 1, 51.12, 3.00, 54.12, '10/11/2019', 1);
 \end{lstlisting}
 \end{enumerate}
 \end{document}
