--- a/activities/Activity7.tex
+++ b/activities/Activity7.tex
@@ -3,7 +3,7 @@
 \input{../header.tex}
 
 \title{Activity 7}
-\author{}
+\author{Tripp Isbell}
 \date{}
 
 \begin{document}
@@ -61,5 +61,74 @@ Purchases: date, quantity, price, tax, total cost
 	edge (product);
 	\end{tikzpicture}
 \end{center}
+\Suppressnumber
+\begin{lstlisting}
+CREATE TABLE Customers (
+	"CustomerID" INTEGER NOT NULL UNIQUE,
+	"Name" TEXT,
+	"Email" TEXT,
+	"Phone" TEXT,
+	"Address" TEXT,
+	"PaymentInfo" TEXT,
+	PRIMARY KEY("CustomerID")
+);
+
+CREATE TABLE Products (
+	"Barcode" INTEGER NOT NULL UNIQUE,
+	"Name" TEXT,
+	"Price" REAL,
+	"Supplier" TEXT,
+	"Quantity" INTEGER,
+	PRIMARY KEY("Barcode")
+);
+
+CREATE TABLE Purchases (
+	PurchaseID INTEGER NOT NULL UNIQUE,
+	CustomerID INTEGER,
+	ProductID INTEGER,
+	Price REAL,
+	Tax REAL,
+	Cost REAL,
+	Date TEXT,
+	Quantity INTEGER,
+	PRIMARY KEY("PurchaseID"),
+	FOREIGN KEY("CustomerID") REFERENCES Customers(CustomerID),
+	FOREIGN KEY("ProductID") REFERENCES Products(ProductID)
+);
+
+INSERT INTO Customers (CustomerID, Name, Email, Phone, Address, PaymentInfo)
+VALUES	(1, 'Alice Appleton', 'aappleton@yahoo.com', '334-555-6123', 
+		'345 Apple St', 'credit card'),
+			(2, 'Bob Baker', 'bbaker@gmail.com', '123-456-7891', 
+		'123 Abbey Rd', 'paypal'),
+			(3, 'Charlie Wilson', 'cwilson@outlook.com', '453-674-1235', 
+		'7351 Ross St', 'cash'),
+			(4, 'Dan Glover', 'dglover@gmail.com', '954-102-6423', 
+		'123 Main St', 'credit card'),
+			(5, 'Eve Mcgee', 'emcgee@icloud.com', '121-644-1345', 
+		'101 College St', 'credit card');
+
+INSERT INTO Products (ProductID, Name, Price, Supplier, Quantity)
+VALUES	(1, 'jacket', 59.99, 'Jackets Inc.', 10),
+			(2, 'pants', 21.95, 'Nike', 25),
+			(3, 't-shirt', 14.99, 'Old Navy', 100),
+			(4, 'dress', 44.95, 'Dress store', 30),
+			(5, 'shoes', 49.99, 'Shoemart', 15);
+
+INSERT INTO Purchases (PurchaseID, CustomerID, ProductID, Price, Tax, Cost, 
+	Date, Quantity)
+VALUES	(1, 3, 2, 21.95, 0.05, 22.00, '10/4/2019', 1),
+			(2, 5, 5, 41.55, 1.00, 42.55, '10/5/2019', 1),
+			(3, 4, 5, 49.99, 0.00, 99.98, '10/6/2019', 2),
+			(4, 2, 1, 59.99, 0.01, 60.00, '10/7/2019', 1),
+			(5, 5, 2, 24.99, 5.00, 29.99, '10/7/2019', 1),
+			(6, 3, 4, 44.95, 3.00, 47.95, '10/8/2019', 1),
+			(7, 3, 3, 10.83, 1.00, 11.83, '10/9/2019', 1),
+			(8, 1, 2, 21.95, 3.00, 24.95, '10/9/2019', 1),
+			(9, 4, 5, 49.99, 0.01, 50.00, '10/10/2019', 1),
+			(10, 1, 1, 51.12, 3.00, 54.12, '10/11/2019', 1);
+\end{lstlisting}
+
+
 
 \end{document}
