--- a/header.tex
+++ b/header.tex
@@ -33,6 +33,8 @@
 \usetikzlibrary{arrows.meta}				% arrows.meta - customizable arrow tips
 \usetikzlibrary{er}							% entity-relationship diagrams
 \usetikzlibrary{positioning} 				% relative positioning
+\usetikzlibrary{shadows}
+\usetikzlibrary{shapes}
 
 \usepackage{xcolor}							% xcolor - adds additional colors
 
