--- a/activities/activity8.tex
+++ b/activities/activity8.tex
@@ -5,7 +5,8 @@
 \geometry{left=1in, right=1in, top=1in, bottom=1in}
 \title{Activity 8}
 \author{Tripp Isbell\\
-\texttt{cai0004@auburn.edu}}
+\texttt{cai0004@auburn.edu}\\
+{\small\url{https://github.com/Carbonationalism/COMP3700/tree/master/activities/activity8}}}
 \date{}
 
 \begin{document}
