--- a/header.tex
+++ b/header.tex
@@ -21,6 +21,8 @@
 
 % 	Additional
 \usepackage{graphicx}						% graphicx - importing graphics from file
+\usepackage{subcaption}
+\captionsetup[subfigure]{labelformat=empty}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{helvet}
